--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/eslint-config-standard": "^3.0.0-rc.9",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "normalize.css": "^8.0.0",
     "vue-template-compiler": "^2.5.16"
   }
 }
